changed %ld on %lu for output of mysql_thread_id(&mysql) as is thread_id has type ulong (bug #1951 thread id is printed as "signed" instead of "unsigned" in 'mysql')