client/mysql.cc
@@ -358,7 +358,7 @@ int main(int argc,char *argv[])
   put_info("Welcome to the MySQL monitor.  Commands end with ; or \\g.",
 	   INFO_INFO);
   sprintf((char*) glob_buffer.ptr(),
-	  "Your MySQL connection id is %ld to server version: %s\n",
+	  "Your MySQL connection id is %lu to server version: %s\n",
 	  mysql_thread_id(&mysql),mysql_get_server_info(&mysql));
   put_info((char*) glob_buffer.ptr(),INFO_INFO);
 
@@ -1359,7 +1359,7 @@ com_help (String *buffer __attribute__((unused)),
   }
   if (connected)
     tee_fprintf(stdout,
-		"\nConnection id: %ld  (Can be used with mysqladmin kill)\n\n",
+		"\nConnection id: %lu  (Can be used with mysqladmin kill)\n\n",
 		mysql_thread_id(&mysql));
   else
     tee_fprintf(stdout, "Not connected!  Reconnect with 'connect'!\n\n");
@@ -2109,7 +2109,7 @@ com_connect(String *buffer, char *line)
 
   if (connected)
   {
-    sprintf(buff,"Connection id:    %ld",mysql_thread_id(&mysql));
+    sprintf(buff,"Connection id:    %lu",mysql_thread_id(&mysql));
     put_info(buff,INFO_INFO);
     sprintf(buff,"Current database: %s\n",
 	    current_db ? current_db : "*** NONE ***");
@@ -2323,7 +2323,7 @@ com_status(String *buffer __attribute__((unused)),
   {
     MYSQL_RES *result;
     LINT_INIT(result);
-    tee_fprintf(stdout, "\nConnection id:\t\t%ld\n",mysql_thread_id(&mysql));
+    tee_fprintf(stdout, "\nConnection id:\t\t%lu\n",mysql_thread_id(&mysql));
     if (!mysql_query(&mysql,"select DATABASE(),USER()") &&
 	(result=mysql_use_result(&mysql)))
     {
